--- a/serverless/package.json
+++ b/serverless/package.json
@@ -8,7 +8,7 @@
     "node": ">= 6.10.0"
   },
   "scripts": {
-    "deploy": "serverless deploy"
+    "deploy": "serverless deploy --aws-s3-accelerate"
   },
   "dependencies": {
     "aws4": "^1.6.0",
